--- a/审核中.html
+++ b/审核中.html
@@ -370,7 +370,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u1421" class="ax_default line">
-        <img id="u1421_img" class="img " src="images/录音音频审核/u1244.png"/>
+        <img id="u1421_img" class="img " src="images/录音音频审核（第一次进入）/u1244.png"/>
         <!-- Unnamed () -->
         <div id="u1422" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
@@ -388,7 +388,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u1425" class="ax_default line">
-        <img id="u1425_img" class="img " src="images/录音音频审核/u1244.png"/>
+        <img id="u1425_img" class="img " src="images/录音音频审核（第一次进入）/u1244.png"/>
         <!-- Unnamed () -->
         <div id="u1426" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
@@ -397,7 +397,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u1427" class="ax_default line">
-        <img id="u1427_img" class="img " src="images/录音音频审核/u1244.png"/>
+        <img id="u1427_img" class="img " src="images/录音音频审核（第一次进入）/u1244.png"/>
         <!-- Unnamed () -->
         <div id="u1428" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
